<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/reject_item"
        android:title="@string/reject"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction" />

    <item
        android:id="@+id/answer_item"
        android:title="@string/answer"
        app:showAsAction="always" />

    <item
        android:id="@+id/switch_item"
        android:title="@string/call_monitor_switch"
        app:actionLayout="@layout/switch_item"
        app:showAsAction="always" />

    <item
        android:id="@+id/phone_permission_item"
        android:title="@string/set_phone_permission"
        app:showAsAction="never" />

    <item
        android:id="@+id/contacts_permission_item"
        android:title="@string/set_contacts_permission"
        app:showAsAction="never" />
</menu>